# NES

./: .gitignore  Cargo.toml  README.md  assemble_sample.bat  build.rs
.github/workflows/: ci.yaml
frontend_sdl/: Cargo.toml  build.rs
frontend_sdl/src/: main.rs
frontend_windows/: Cargo.toml
frontend_windows/src/: main.rs
nes_core/: Cargo.toml
nes_core/benches/: frame_time.rs
nes_core/src/: apu.rs  cartridge.rs  cpu.rs  cpu_ops.rs  debugger.rs  disassemble.rs  input.rs  lib.rs  mapper.rs  nes.rs  ppu.rs  test_cpu.rs
nes_core/src/apu/: divider.rs  dmc.rs  envelope.rs  length_counter.rs  linear_counter.rs  noise.rs  square.rs  sweep.rs  triangle.rs
nes_core/src/mapper/: axrom.rs  cnrom.rs  dxrom.rs  mapper0.rs  mapper1.rs  mapper2.rs  mapper3.rs  memory_map.rs  mmc1.rs  mmc2.rs  mmc3.rs  nametables.rs  nrom.rs  uxrom.rs
samples/: hello_green.s  hello_stripes.nes  hello_stripes.s  square_wave.nes  square_wave.s
src/: apu.rs  audio.rs  cartridge.rs  cpu.rs  cpu_ops.rs  disassemble.rs  input.rs  instructions.rs  main.rs  mapper.rs  nes.rs  ppu.rs  test_cpu.rs  test_instructions.rs
src/mapper/: mapper0.rs  mapper1.rs
