[package]
name = "nes_emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
imgui = "0.10.0"
imgui-glow-renderer = "0.10.0"
imgui-winit-support = "0.10.0"
glutin = "0.29"
log = "0.4.17"
env_logger = "0.10.0"
