[package]
name = "nes_emu"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = { version = "0.10.0", features = ["humantime"], default-features = false }
sdl2 = "0.35.2"
