[package]
name = "frontend_sdl"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = { version = "0.10.0", features = ["humantime"], default-features = false }
sdl2 = { version = "0.35.2", default-features = false }
nes_core = { path = "../nes_core" }
minifb = "0.24.0"
rfd = "0.11.3"
